--- a/templates/etc/init.d/lumberjack2.erb
+++ b/templates/etc/init.d/lumberjack2.erb
@@ -7,17 +7,17 @@ else
 end
 -%>
 #!/bin/bash
-# Lumberjack daemon
+# Lumberjack2 daemon
 # chkconfig: 345 20 80
 # description: lumberjack daemon
 # processname: lumberjack
 
-DAEMON_PATH="/opt/lumberjack/"
-DAEMON="bin/lumberjack.sh"
-DAEMONOPTS="--ssl-ca-path /etc/lumberjack/<%= @instance %>/ca.crt --host <%= @host %> --port <%= @port %> <%= extra_fields %> <%= @logfiles %>"
+DAEMON_PATH="/opt/lumberjack2/"
+DAEMON="bin/lumberjack2.sh"
+DAEMONOPTS="--ssl-ca-path /etc/lumberjack/<%= @instance %>/ca.crt --config <%= @config %> --cpuprofile <%= @cpuprofile %> --idle-flush-time <%= idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
 
-NAME="lumberjack-<%= @instance %>"
-DESC="Lumberjack-<%= @instance %>"
+NAME="lumberjack2-<%= @instance %>"
+DESC="Lumberjack2-<%= @instance %>"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
 
