Working Module, fully functional. Knock on Wood.

--- a/templates/etc/init.d/lumberjack2.erb
+++ b/templates/etc/init.d/lumberjack2.erb
@@ -8,7 +8,7 @@ DAEMON_PATH="/var/local/lumberjack2/"
 DAEMON="bin/lumberjack2.sh"
 OUTPUT=""
 
-DAEMONOPTS="--config <%= @config %> --cpuprofile <%= @cpuprofile  %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
+DAEMONOPTS="--config <%= @config %> <% if @cpuprofile %> --cpuprofile <%= @cpuprofile  %>  <% end %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
 
 NAME="lumberjack2"
 DESC="Lumberjack2"
