--- a/templates/etc/init.d/lumberjack2.erb
+++ b/templates/etc/init.d/lumberjack2.erb
@@ -1,17 +1,17 @@
 #!/bin/bash
-# Lumberjack2 daemon
+# Lumberjack daemon
 # chkconfig: 345 20 80
-# description: lumberjack2 daemon
-# processname: lumberjack2
+# description: lumberjack daemon
+# processname: lumberjack
 
-DAEMON_PATH="/var/local/lumberjack2/"
-DAEMON="bin/lumberjack2.sh"
+DAEMON_PATH="/opt/lumberjack/"
+DAEMON="bin/lumberjack.sh"
 OUTPUT=""
 
 DAEMONOPTS="--config <%= @config %> <% if @cpuprofile %> --cpuprofile <%= @cpuprofile  %>  <% end %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
 
-NAME="lumberjack2"
-DESC="Lumberjack2"
+NAME="lumberjack"
+DESC="Lumberjack"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
 
