--- a/templates/etc/init.d/lumberjack2.erb
+++ b/templates/etc/init.d/lumberjack2.erb
@@ -1,8 +1,8 @@
 #!/bin/bash
-# Lumberjack daemon
+# Lumberjack2 daemon
 # chkconfig: 345 20 80
-# description: lumberjack daemon
-# processname: lumberjack
+# description: lumberjack2 daemon
+# processname: lumberjack2
 
 DAEMON_PATH="/opt/lumberjack/"
 DAEMON="bin/lumberjack.sh"
@@ -10,8 +10,8 @@ OUTPUT=""
 
 DAEMONOPTS="--config <%= @config %> <% if @cpuprofile %> --cpuprofile <%= @cpuprofile  %>  <% end %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
 
-NAME="lumberjack"
-DESC="Lumberjack"
+NAME="lumberjack2"
+DESC="Lumberjack2"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
 
