Revert "updated some configdir vs config pieces so there is alignment" Reading it wrong here.
This reverts commit e01d61286bae99b0ae6343759844d0c409fa5725.

--- a/templates/etc/init.d/lumberjack.erb
+++ b/templates/etc/init.d/lumberjack.erb
@@ -4,7 +4,7 @@
 # description: lumberjack daemon
 # processname: lumberjack
 
-DAEMON_PATH="<%= @installpath %>"
+DAEMON_PATH="/var/local/lumberjack/"
 DAEMON="bin/lumberjack.sh"
 OUTPUT=""
 
