--- a/templates/etc/init.d/lumberjack.erb
+++ b/templates/etc/init.d/lumberjack.erb
@@ -4,11 +4,11 @@
 # description: lumberjack daemon
 # processname: lumberjack
 
-DAEMON_PATH="/var/local/lumberjack/"
+DAEMON_PATH="<%= @installdir %>"
 DAEMON="bin/lumberjack.sh"
 OUTPUT=""
 
-DAEMONOPTS="--config <%= @config %> <% if @cpuprofile %> --cpuprofile <%= @cpuprofile  %>  <% end %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
+DAEMONOPTS="--config <%= @fullconfig %> <% if @cpuprofile %> --cpuprofile <%= @cpuprofile  %>  <% end %> --idle-flush-time <%= @idle_flush_time %> --log-to-syslog <%= @log_to_syslog %> --spool-size <%= @spool_size %>"
 
 NAME="lumberjack"
 DESC="Lumberjack2"
